Cleaned up coding files

--- a/views/portfolios/edit.ejs
+++ b/views/portfolios/edit.ejs
@@ -61,7 +61,7 @@
           <label>Amount Spent
             <input type="text" name="amount" min="0" max="9999999" value="<%=detailsPortfolio.amount %>">
           </label><br>
-          <label>Date
+          <label> Add Date
             <input type="datetime-local" name="date" value="<%= detailsPortfolio.date%>">
           </label><br><br>
           <input type="submit" class="btn btn-primary" value="Add Edits">
