--- a/views/portfolios/edit.ejs
+++ b/views/portfolios/edit.ejs
@@ -62,7 +62,7 @@
             <input type="text" name="amount" min="0" max="9999999" value="<%=detailsPortfolio.amount %>">
           </label><br>
           <label> Add Date
-            <input type="datetime-local" name="date" value="<%= detailsPortfolio.date%>">
+            <input type="datetime-local" name="date" value="<%= detailsPortfolio.date.toISOString().split(".")[0]%>">
           </label><br><br>
           <input type="submit" class="btn btn-primary" value="Add Edits">
         </form> 
